<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nearinfinity.honeycomb</groupId>
    <artifactId>honeycomb</artifactId>
    <version>0.1</version>
    <name>Honeycomb Parent Project</name>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <distributionManagement>
        <site>
            <id>site-docs</id>
            <url>http://www.foo.xyz</url>
        </site>
    </distributionManagement>

    <profiles>
        <profile>
            <id>apache</id>
            <activation>
                <property>
                    <name>apache</name>
                </property>
            </activation>
            <properties>
                <hadoop.artifactId>hadoop-core</hadoop.artifactId>
                <hadoop.version>1.0.4</hadoop.version>
                <hbase.version>0.94.1</hbase.version>
            </properties>
            <!--<modules> -->
            <!--<module>HBaseTableCreator</module> -->
            <!--</modules> -->
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>
                                        ${project.build.directory}/lib
                                    </outputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>cdh</id>
            <activation>
                <property>
                    <name>cdh</name>
                </property>
            </activation>
            <properties>
                <hadoop.artifactId>hadoop-client</hadoop.artifactId>
                <hadoop.version>2.0.0-mr1-cdh4.1.2</hadoop.version>
                <hbase.version>0.92.1-cdh4.1.2</hbase.version>
            </properties>
            <repositories>
                <repository>
                    <id>cloudera-releases</id>
                    <url>
                        https://repository.cloudera.com/artifactory/cloudera-repos/
                    </url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                </repository>
            </repositories>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.13</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <attach>true</attach>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <version>2.6</version>
                            <reports>
                                <report>index</report>
                                <report>dependencies</report>
                                <report>dependency-management</report>
                                <report>plugins</report>
                                <report>plugin-management</report>
                                <report>summary</report>
                                <report>modules</report>
                            </reports>
                            <configuration>
                                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>2.9</version>
                            <configuration>
                                <show>package</show>
                                <failOnError>false</failOnError>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-report-plugin</artifactId>
                            <version>2.13</version>
                            <configuration>
                                <linkXRef>true</linkXRef>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jxr-plugin</artifactId>
                            <version>2.3</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>cobertura-maven-plugin</artifactId>
                            <version>2.5.2</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.5.2</version>
                            <configuration>
                                <xmlOutput>true</xmlOutput>
                                <argLine>-Xmx256m</argLine>
                                <argLine>-XX:MaxPermSize=256m</argLine>
                            </configuration>
                        </plugin>
                    </reportPlugins>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>HBaseAdapter</module>
        <module>DataCreator</module>
        <module>BulkLoadMapper</module>
        <module>MedianSplit</module>
    </modules>
</project>
